--- a/src/app/home/productos/productos.component.css
+++ b/src/app/home/productos/productos.component.css
@@ -1,22 +1,22 @@
-
- /*
-   * IMAGENES PREVIEW  DE PRODUCTOS
-  */
-
 .img-container {
   display:flex;
   flex-wrap: wrap;
   align-content: center;
-  }.img-container>div {
-    flex: 0 100%;
-
-  }.img-product{
-    border-radius: 50%;
   }
 
-  /*
-   * IMAGENES MINIATURA DE COLORES
-  */
+  .img-container div {
+    flex: 0 100%;
+
+  }
+
+  .range-text{
+    font-size: 14px;
+    color: black;
+  }
+
+  .img-product{
+    border-radius: 50%;
+  }
 
   .btn-product-img {
     margin-left: 2px;
@@ -32,4 +32,8 @@
   .btn-product-img-focus {
     border: solid 2.5px blue;
     border-radius: 50%;
+  }
+
+  mat-slider {
+    width: 80%;
   }
