--- a/src/app/home/productos/productos.component.html
+++ b/src/app/home/productos/productos.component.html
@@ -5,9 +5,7 @@
       <div class="container">
         <h1 class="page-title">Lista de productos<span></span></h1>
       </div>
-      <!-- End .container -->
     </div>
-    <!-- End .page-header -->
     <nav aria-label="breadcrumb" class="breadcrumb-nav mb-2">
       <div class="container">
         <ol class="breadcrumb">
@@ -16,9 +14,7 @@
           <li class="breadcrumb-item active" aria-current="page">Lista</li>
         </ol>
       </div>
-      <!-- End .container -->
     </nav>
-    <!-- End .breadcrumb-nav -->
     <div class="page-content">
       <div class="container">
         <div class="row">
@@ -28,13 +24,9 @@
                 <div class="toolbox-info">
                   Mostrando <span>{{productos.length}}</span> Productos
                 </div>
-                <!-- End .toolbox-info -->
               </div>
-              <!-- End .toolbox-left -->
             </div>
-            <!-- End .toolbox -->
             <div class="" *ngFor="let producto of productos; let i = index">
-              <!-- ESTO ES UN PRODUCTO -->
               <div class="product product-list">
                 <div class="row">
                   <div class="col-6 col-lg-3">
@@ -43,9 +35,7 @@
                         <img id="prod-img-{{i}}" src="{{detalles[i]?.[0].url}}" alt="Product image" class="product-image">
                       </a>
                     </figure>
-                    <!-- End .product-media -->
                   </div>
-                  <!-- End .col-sm-6 col-lg-3 -->
 
                   <div class="col-3 col-lg-3 order-lg-last">
                     <div class="col-6 col-lg-2 order-lg-last">
@@ -53,30 +43,23 @@
                         <div class="product-title"> Tallas</div>
                         <select id="prod-talla-sel-{{i}}"> </select>
                       </div>
-                      <!-- End .product-list-action -->
                     </div>
                     <div class="product-list-action">
                       <div class="product-price">
                         ${{producto.precio}}
                       </div>
-                      <!-- End .product-price -->
                       <button id="prod-agg-btn-{{i}}" (click)="agregarACarrito(producto.idProducto)" class="btn-product btn-cart btn btn-round" disabled><span>Agregar al carrito</span></button>
                     </div>
-                    <!-- End .product-list-action -->
                   </div>
-                  <!-- End .col-sm-6 col-lg-3 -->
 
                   <div class="col-lg-6">
                     <div class="row">
                     <div class="product-body product-action-inner">
                       <div class="product-title"> <a href="#">{{producto.nombre}}</a> </div>
-                      <!-- End .product-title -->
                       <h3 class="product-cat"><a href="product.html">{{producto.categoria.nombre}}</a></h3>
-                      <!-- End .product-cat -->
                       <div class="product-content">
                         <p>{{producto.descripcion}}</p>
                       </div>
-                      <!-- End .product-content -->
                     </div>
                       <div class="row justify-content-start">
                         <div *ngFor="let pd of detalles[i]; let j = index" class="col-lg-2 img-container">
@@ -85,34 +68,24 @@
                           </div>
                         </div>
                       </div>
-                      <!-- End .product-nav -->
                     </div>
-                    <!-- End .product-body -->
                   </div>
-                  <!-- End .col-lg-6 -->
                 </div>
-                <!-- End .row -->
               </div>
-              <!-- End .product -->
             </div>
-            <!-- End .products -->
           </div>
-          <!-- End .col-lg-9 -->
           <aside class="col-lg-3 order-lg-first">
             <div class="sidebar sidebar-shop">
               <div class="widget widget-clean" >
                 <label>Filtros:</label>
                 <a href="#" (click) ="cleanFilter()" class="sidebar-filter-clear">Limpiar todo</a>
               </div>
-              <!-- End .widget widget-clean -->
               <div class="widget widget-collapsible">
                 <h3 class="widget-title">
                   <a data-toggle="collapse" href="#" (click) ="toggleClick('filter-marca')">
                     Marcas disponibles
                   </a>
                 </h3>
-                <!-- End .widget-title -->
-
                 <div id="filter-marca" class="collapse">
                   <div class="widget-body">
                     <div class="filter-items filter-items-count">
@@ -133,7 +106,6 @@
                     Categorias disponibles
                   </a>
                 </h3>
-                <!-- End .widget-title -->
 
                 <div class="collapse" id="filter-cat">
                   <div class="widget-body">
@@ -148,7 +120,6 @@
                   </div>
                 </div>
               </div>
-              <!-- End .widget -->
 
               <div class="widget widget-collapsible">
                 <h3 class="widget-title">
@@ -156,7 +127,6 @@
                     Colores disponibles
                   </a>
                 </h3>
-                <!-- End .widget-title -->
 
                 <div class="collapse" id="filter-color">
                   <div class="widget-body">
@@ -171,7 +141,6 @@
                   </div>
                 </div>
               </div>
-              <!-- End .widget -->
 
               <div class="widget widget-collapsible">
                 <h3 class="widget-title">
@@ -179,20 +148,19 @@
                     Tallas disponibles
                   </a>
                 </h3>
-                <!-- End .widget-title -->
 
                 <div class="collapse" id="filter-talla">
                   <div class="widget-body">
-                    <div class="filter-items filter-items-count">
-                      <div class="range-slider">
-                        <input id="filter-talla-min" type="range" class="min-price" value="100" min="30" max="50" step="2">
-                        <input id="filter-talla-max" type="range" class="max-price" value="250" min="30" max="50" step="2">
-                      </div>
+                    <div class="filter-items filter-items-range">
+                      <mat-slider min="30" max="50" step="2">
+                        <input [(ngModel)]="talla[0]" matSliderStartThumb>
+                        <input [(ngModel)]="talla[1]" matSliderEndThumb>
+                      </mat-slider>
+                      <p class="range-text">{{talla[0]}} — {{talla[1]}}</p>
                     </div>
                   </div>
                 </div>
               </div>
-              <!-- End .widget -->
 
               <div class="widget widget-collapsible">
                 <h3 class="widget-title">
@@ -200,43 +168,32 @@
                     Precio
                   </a>
                 </h3>
-                <!-- End .widget-title -->
 
                 <div class="collapse" id="filter-precio">
                   <div class="widget-body">
                     <div class="filter-items filter-items-count">
-                      <div class="range-slider">
-                        <input id="filter-precio-min" type="range" class="min-price" value="100" min="0" max="1000000" step="5000">
-                        <input id="filter-precio-max" type="range" class="max-price" value="250" min="0" max="1000000" step="5000">
-                      </div>
+                      <mat-slider min="30000" max="500000" step="10000">
+                        <input [(ngModel)]="precio[0]" matSliderStartThumb>
+                        <input [(ngModel)]="precio[1]" matSliderEndThumb>
+                      </mat-slider>
+                      <p class="range-text">${{precio[0]}} — ${{precio[1]}}</p>
                     </div>
                   </div>
                 </div>
               </div>
-              <!-- End .widget -->
               <div class="product-list-action">
                 <button id="filter-btn" (click)="filtrar()" class="btn-product btn btn-round">Filtrar</button>
               </div>
             </div>
-            <!-- End .sidebar sidebar-shop -->
           </aside>
-          <!-- End .col-lg-3 -->
         </div>
-        <!-- End .row -->
       </div>
-      <!-- End .container -->
     </div>
-    <!-- End .page-content -->
   </main>
-  <!-- End .main -->
-
 </div>
-<!-- End .page-wrapper -->
 <button id="scroll-top" title="Volver arriba"><i class="icon-arrow-up"></i></button>
 
-<!-- Mobile Menu -->
 <div class="mobile-menu-overlay"></div>
-<!-- End .mobil-menu-overlay -->
 
 <div class="mobile-menu-container">
   <div class="mobile-menu-wrapper">
@@ -255,13 +212,9 @@
       <a href="#" class="social-icon" target="_blank" title="Instagram"><i class="icon-instagram"></i></a>
       <a href="#" class="social-icon" target="_blank" title="Youtube"><i class="icon-youtube"></i></a>
     </div>
-    <!-- End .social-icons -->
   </div>
-  <!-- End .mobile-menu-wrapper -->
 </div>
-<!-- End .mobile-menu-container -->
 
-<!-- Sign in / Register Modal -->
 <div class="modal fade" id="signin-modal" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
@@ -270,11 +223,7 @@
           <span aria-hidden="true"><i class="icon-close"></i></span>
         </button>
       </div>
-      <!-- End .modal-body -->
     </div>
-    <!-- End .modal-content -->
   </div>
-  <!-- End .modal-dialog -->
 </div>
-<!-- End .modal -->
 <app-footer></app-footer>
